--- a/DataDrivenTDAFinalPresentation.qmd
+++ b/DataDrivenTDAFinalPresentation.qmd
@@ -431,25 +431,6 @@ Feedforward neural network with structure:
 
 # Analysis {#sec-Analysis}
 
-## ML Analysis
-
-*Need confusion matrices*
-*Need accuracy, precision, recall, f_meas*
-
-```{r ml_results}
-#run the Mnist ML method code first, and take results from there
-# ml_results <- tibble(
-#   method = c("multinomial", "dropout nn", "ridge nn", "lasso no"),
-#   accuracy = c(mlogit_acc, nn_dropout_accu, nn_ridge_accu, nn_lasso_accu)
-# )
-# saveRDS(ml_results, "ml_results")
-
-ml_results <- readRDS("ml_results") #still a tibble so easy to edit
-
-ml_results |> 
-  kable(digits = 4)
-```
-
 ## Confusion Matrix Heatmap - NN dropout
 ```{r, fig.dim=c(10,6)}
 ## ggplot function for confusion matrix heatmap
@@ -537,11 +518,38 @@ as.data.frame.matrix(conf_matrix_nn_ridge) %>%
   )
 ```
 
-
 ## Confusion Matrix Heatmap - Multinomial 
 ```{r,  fig.dim=c(10,6)}
 mlogit_conf_mat <- readRDS("mlogit_conf_mat")
-cm_ggplot(mlogit_conf_mat, type = "mlogit")
+# cm_ggplot(mlogit_conf_mat, type = "mlogit")
+conf_matrix_mlogit <- mlogit_conf_mat$table
+as.data.frame.matrix(conf_matrix_mlogit) %>%
+  mutate(true_label = fct_rev(rownames(.))) |>
+  pivot_longer(
+    cols = -true_label,
+    names_to = "predicted_label",
+    values_to = "count"
+  ) |>
+  mutate(text_color = if_else(count < 450, "black", "white")) |>
+  ggplot(aes(x = predicted_label, y = true_label, fill = count)) +
+  geom_tile(color = "gray50", linewidth = 0.5) +
+  
+  geom_text(aes(label = count, color = text_color), size = 3.5, fontface = "bold") +
+  scale_fill_viridis_c(option = "magma", direction = -1) +
+  
+  scale_color_manual(values = c("black" = "black", "white" = "white"), guide = "none") +
+  coord_fixed() +
+  theme_minimal(base_size = 12) +
+  labs(
+    x = "Predicted Label",
+    y = "True Label",
+    fill = "Count"
+  ) +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1, face = "bold"),
+    axis.text.y = element_text(face = "bold"),
+    panel.grid = element_blank()
+  )
 ```
 
 ## Proposed Method Analysis
@@ -591,7 +599,6 @@ ggplot(posterior_dim1_df, aes(x = birth, y = persistence, fill = intensity)) +
 ## Proposed Method Analysis
 
 ```{r tda01confmatrix, fig.dim=c(10,6)}
-
 full_tda_01_results <- readRDS("btda/full_tda_01_results.rds")
 
 conf_matrix <- table(
@@ -647,11 +654,24 @@ results_for_metrics <- full_tda_01_results |>
   mutate(
     true_label = factor(true_label, levels = 0:9),
     predicted_label = factor(predicted_label, levels = 0:9)
-  )
+  ) 
 
-multi_metrics(results_for_metrics, truth = true_label, estimate = predicted_label) |> 
+proposed_accuracy <- multi_metrics(results_for_metrics, truth = true_label, estimate = predicted_label) |> 
   janitor::clean_names() |>
-  kable()
+  filter(metric == "accuracy") |> pull(estimate)
+
+#run the Mnist ML method code first, and take results from there
+# ml_results <- tibble(
+#   method = c("multinomial", "dropout nn", "ridge nn", "lasso no"),
+#   accuracy = c(mlogit_acc, nn_dropout_accu, nn_ridge_accu, nn_lasso_accu)
+# )
+# saveRDS(ml_results, "ml_results")
+
+ml_results <- readRDS("ml_results") #still a tibble so easy to edit
+
+ml_results |> 
+  add_row(method = "proposed", accuracy = proposed_accuracy) |>
+  kable(digits = 4)
 ```
 
 # TDA + ML {#sec-TDAML}
