--- a/DataDrivenTDAFinalPresentation.qmd
+++ b/DataDrivenTDAFinalPresentation.qmd
@@ -247,6 +247,10 @@ ggplot(train_df_long) +
 
 ```
 
+:::{.notes}
+- Most pixel values are zero, but out of the 784 pixels, 703 have an intensity > 0 at least once
+:::
+
 ## Training Data tSNE Visualization
 
 ```{r tnse, fig.dim=c(10,6)}
@@ -272,6 +276,7 @@ ggplot(df_tsne, aes(Dim1, Dim2, color = digit)) +
 
 :::{.notes}
 - We adopt t-distributed Stochastic Neighbor Embedding(t-SNE) to represent the data in 2D.See [T-SNE Exploration by TusVasMit](https://rpubs.com/TusVasMit/T-SNEExploration) for more details.
+- tSNE is a technique for dimension reduction that is well-suited for visualizing high-dimensional data in a lower-dimensional space
 :::
 
 # Traditional ML
@@ -284,9 +289,14 @@ Feedforward neural network with structure:
 
 :::{.incremental}
 - Input layer: Consists of neurons that receives the input data. Each neuron in the input layer represents a feature of the input data
-- Hidden layer: One or more hidden layers placed between the input and output layers, responsible for capturing complex patterns
+- Hidden layer: One(or more) hidden layers placed between the input and output layers, responsible for capturing complex patterns
 - Output layer: Final output of the network; Number of neurons represents the number of digits
 :::
+
+:::{.notes}
+- We only use one hidden layer in our case
+:::
+
 
 ## NN with regularization
 
@@ -311,6 +321,12 @@ Feedforward neural network with structure:
 - NN with lasso regularization 
 :::
 
+:::{.notes}
+- NN w/ dropout is a standard approach to prevent overfitting by randomly dropping out a fraction of neurons during training
+- NN w/ ridge regularization adds a penalty term to the loss function that is proportional to the square of the weights, helping to prevent overfitting by discouraging large weights
+- NN w/ lasso regularization adds a penalty term to the loss function that is proportional to the absolute value of the weights, promoting sparsity in the model by driving some weights to zero
+:::
+
 ## Multinomial logistic regression
 
 :::{.incremental}
@@ -332,7 +348,7 @@ Feedforward neural network with structure:
 :::{.incremental}
 - Train the network for 30 epochs with a batch size of 128
     - SGD updates weights for each batch
-- Images are presented in batches of 128, and SGD updates weights after each batch
+- Images are presented in batches of 128 and SGD updates weights after each batch
 - Each epoch processes all 60,000 training images
 <!-- - After 30 epochs, the network’s error (loss) is visualized on the left graph -->
 <!-- - Accuracy shown on the right graph -->
@@ -340,6 +356,7 @@ Feedforward neural network with structure:
 :::
 
 :::{.notes}
+- Epoch: One complete pass through the entire training dataset 
 - SGD is an optimization algorithm used to minimize the loss function by updating the model's weights based on the gradients of the loss with respect to the weights
 - This process iteratively adjusts the weights to improve the model's performance on the training data
 :::
@@ -430,6 +447,15 @@ Feedforward neural network with structure:
 ```
 
 Based on framework by [@Maroulas2020-sp]
+
+:::{.notes}
+- images 28x28
+- 60,000 train PDs made
+- one uniform prior for all 10 digits which is a uniform distribution over the persistence diagram spacei(\theta) = \sum_\limits{j = 1}^J \omega_j \mathcal{N}(\theta | \mu_j, \Sigma_j)$
+    - J = 1, $\omega = 1$
+    - mean vector $[.5, .5]^\top$
+    - covariance is $\Sigma\_1 = 1 \cdot I\_2 = \begin{pmatrix} 1 & 0 \\ 0 & 1 \end{pmatrix}$
+:::
 
 # Analysis {#sec-Analysis}
 
